test/must_fail/api/must_fail_file_read_number.ref
error: variable 'path' in function 'file_read(path)' should be string
  [must_fail_file_read_number.ngjs:0:0] in <anonymous>()
    file_read(1)
    ^

hint: function 'file_read(path)' was called with 1 arguments
hint: argument #0 was 1 (number)

Stack trace (1 frames):
  [must_fail_file_read_number.ngjs:0:0] in <anonymous>()
    file_read(1)
    ^

exit(7)
