test/must_fail/api/must_fail_file_read_number.ngjs
#!/usr/bin/env ngspicejs
// file read wants string
// linter: ngspicejs-lint
"use strict";

file_read(1);